all views are being printed

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -4,7 +4,13 @@
     <title>{% block title %}MarcJacobs Products{% endblock %}</title>
 </head>
 <body>
-    {% block content %}<h1 style="text-align:center">MarcJacobs reknowned products.</h1>{% endblock %}
+    {% block content-title %}
+        <h1 style="text-align:center">MarcJacobs reknowned products.</h1>
+    {% endblock %}
+
+    {% block content-body %}
+
+    {% endblock  %}
 
     {% block footer %}
     <hr>
