product list and product details page completed initial commit

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,4 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+{% load staticfiles %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!DOCTYPE HTML">
 <html lang="en">
 <head>
     <title>{% block title %}MarcJacobs Products{% endblock %}</title>
