redirected successfully to the page where user came from to login page

--- a/mysite/templates/authentication/login.html
+++ b/mysite/templates/authentication/login.html
@@ -24,9 +24,10 @@
 
                 <td><input type="submit" value="Login" name="login"></td>
                 <td>
-                <button
-                onClick="location.href='{% url 'authentication:signup' %}'"
-                type="button">Signup</button></td>
+                    <button onClick="location.href='{% url 'authentication:signup' %}'" type="button">
+                        Signup
+                    </button>
+                </td>
             </tr>
     </form>
 {% endblock  %}
