--- a/mysite/templates/super_store/product_list.html
+++ b/mysite/templates/super_store/product_list.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block class-navbar-products %}
+    class="active"
+{% endblock %}
+
 {% block content-body %}
 
     <div class="container-fluid">
