--- a/mysite/templates/authentication/signup.html
+++ b/mysite/templates/authentication/signup.html
@@ -5,6 +5,11 @@
     Sign up
 {% endblock  %}
 
+{% block navbar-not-on-logout %}{% endblock  %}
+{% block navbar-logout %}{% endblock  %}
+
+
+
 {% block content-title %}
     Sign up to view reknowned products
 {% endblock %}
