--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,12 +1,56 @@
 {% load staticfiles %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 <!DOCTYPE HTML">
 <html lang="en">
 <head>
     <title>{% block title %}MarcJacobs Products{% endblock %}</title>
 </head>
 <body>
+
+
+    {% block navigation %}
+
+
+        <nav class="navbar navbar-default navbar-static-top" role="navigation">
+            <a class="navbar-brand" style="font-family: 'Tangerine', serif; font-size: 48px;
+background-color: white;" href="{% url 'super_store:brands' %}">Super Store</a>
+            <ul class="nav navbar-nav">
+                {% block navbar-not-on-logout %}
+
+                    <li {% block class-navbar-home %}
+
+                    {% endblock %}>
+                        <a href="{% url 'super_store:brands' %}">Home</a>
+                    </li>
+                    <li {% block class-navbar-products %}
+
+                    {% endblock %}>
+                        <a href="{% url 'super_store:all-products' %}">All Products</a>
+                    </li>
+                    {% block product %}
+
+                    {% endblock %}
+
+                {% endblock %}
+
+            </ul>
+            {% block navbar-logout %}
+                <ul class="nav navbar- navbar-right">
+                    <li  style="font-family: 'Tangerine', serif; font-size: 48px;background-color: white;" onclick="location.href='{% url 'authentication:logout' %}'">
+                        Logout
+                    </li>
+                </ul>
+                {% comment %}<a class="navbar-brand" style="font-family: 'Tangerine', serif; font-size: 48px;
+            background-color: white;" href="{% url 'super_store:brands' %}">Super Store</a>{% endcomment %}
+            {% endblock %}
+
+
+        </nav>
+
+
+    {% endblock  %}
+
     <h1 style="text-align:center">
         {% block content-title %}
             MarcJacobs reknowned products.
@@ -14,9 +58,6 @@
     </h1>
 
     {% block logout %}
-        <div class="pull-right">
-            <button onclick="location.href='{% url 'authentication:logout' %}'" type="button" class="btn btn-lg btn-info">logout</button>
-        </div>
         {% block content-body %}
 
         {% endblock  %}
