--- a/mysite/templates/super_store/brands.html
+++ b/mysite/templates/super_store/brands.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+
+
+{% block class-navbar-home %}
+    class="active"
+{% endblock %}
+
+
 {% block content-body %}
 
 
@@ -20,7 +27,7 @@
                             <div class="col-xs-3 no-padding">
                                 <div class="thumbnail" style="height: 400px; width: 235px">
                                     <a href={% url 'super_store:brand-products-list' brand.name %}>
-                                        <img src="{{brand.image_icon}}" alt="{{brand.name}}" style="height: 300px">
+                                        <img src="{{brand.image_icon.url}}" alt="{{brand.name}}" style="height: 300px">
                                         <div class="caption">
                                             <p class="text-center">
                                                 {{brand.name}}
